User Shopping Sprees

--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -2083,6 +2083,83 @@
     "order by ticker\n",
     ";"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f47040d4-c85d-4e7f-b35b-2eb305d090bf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##User Shopping Sprees\n",
+    "Amazon SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/amazon-shopping-spree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1107f0c6-4a9e-4f41-985b-ae314d3dedd0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- In an effort to identify high-value customers, Amazon asked for your help to obtain data about users who go on shopping sprees. A shopping spree occurs when a user makes purchases on 3 or more consecutive days.\n",
+    "\n",
+    "-- List the user IDs who have gone on at least 1 shopping spree in ascending order.\n",
+    "\n",
+    "-- transactions Table:\n",
+    "-- Column Name\tType\n",
+    "-- user_id\tinteger\n",
+    "-- amount\tfloat\n",
+    "-- transaction_date\ttimestamp\n",
+    "-- transactions Example Input:\n",
+    "-- user_id\tamount\ttransaction_date\n",
+    "-- 1\t9.99\t08/01/2022 10:00:00\n",
+    "-- 1\t55\t08/17/2022 10:00:00\n",
+    "-- 2\t149.5\t08/05/2022 10:00:00\n",
+    "-- 2\t4.89\t08/06/2022 10:00:00\n",
+    "-- 2\t34\t08/07/2022 10:00:00\n",
+    "-- Example Output:\n",
+    "-- user_id\n",
+    "-- 2\n",
+    "-- Explanation\n",
+    "-- In this example, user_id 2 is the only one who has gone on a shopping spree.\n",
+    "\n",
+    "-- Solution\n",
+    "with transactions_diff as\n",
+    "(SELECT user_id, \n",
+    "transaction_date,\n",
+    "lead(transaction_date) over(partition by user_id order by transaction_date) as next_transaction_date,\n",
+    "--datediff('day', lead(transaction_date) over(partition by user_id order by transaction_date), transaction_date) as days_diff\n",
+    "(lead(transaction_date) over(partition by user_id order by transaction_date)::date - transaction_date::date) as days_diff\n",
+    "FROM transactions\n",
+    "),\n",
+    "consecutive_transactions as\n",
+    "(Select user_id,\n",
+    "(lead(days_diff) over(partition by user_id order by transaction_date) - days_diff) as diff\n",
+    "from transactions_diff\n",
+    ")\n",
+    "Select distinct user_id \n",
+    "from consecutive_transactions\n",
+    "where diff = 0;"
+   ]
   }
  ],
  "metadata": {
