Histogram of Users and Purchases

--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -2160,6 +2160,83 @@
     "from consecutive_transactions\n",
     "where diff = 0;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1eaa06fb-a2fb-48e1-af34-39eb14009bed",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Histogram of Users and Purchases\n",
+    "Walmart SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/histogram-users-purchases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fb3a0819-48fa-466f-bed0-01ff5bf200f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- Assume you're given a table on Walmart user transactions. Based on their most recent transaction date, write a query that retrieve the users along with the number of products they bought.\n",
+    "\n",
+    "-- Output the user's most recent transaction date, user ID, and the number of products, sorted in chronological order by the transaction date.\n",
+    "\n",
+    "-- user_transactions Table:\n",
+    "-- Column Name\tType\n",
+    "-- product_id\tinteger\n",
+    "-- user_id\tinteger\n",
+    "-- spend\tdecimal\n",
+    "-- transaction_date\ttimestamp\n",
+    "-- user_transactions Example Input:\n",
+    "-- product_id\tuser_id\tspend\ttransaction_date\n",
+    "-- 3673\t123\t68.90\t07/08/2022 12:00:00\n",
+    "-- 9623\t123\t274.10\t07/08/2022 12:00:00\n",
+    "-- 1467\t115\t19.90\t07/08/2022 12:00:00\n",
+    "-- 2513\t159\t25.00\t07/08/2022 12:00:00\n",
+    "-- 1452\t159\t74.50\t07/10/2022 12:00:00\n",
+    "-- Example Output:\n",
+    "-- transaction_date\tuser_id\tpurchase_count\n",
+    "-- 07/08/2022 12:00:00\t115\t1\n",
+    "-- 07/08/2022 12:00:000\t123\t2\n",
+    "-- 07/10/2022 12:00:00\t159\t1\n",
+    "\n",
+    "-- Solution\n",
+    "with raked_user_transactions as\n",
+    "(SELECT user_id, \n",
+    "product_id, \n",
+    "transaction_date, \n",
+    "dense_rank() over(partition by user_id order by transaction_date desc) as rnk\n",
+    "FROM user_transactions\n",
+    ")\n",
+    "Select transaction_date, \n",
+    "user_id,  \n",
+    "count(product_id) as purchase_count\n",
+    "from raked_user_transactions\n",
+    "where rnk = 1\n",
+    "group by transaction_date, user_id\n",
+    "order by transaction_date;\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
