--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -2158,7 +2158,16 @@
     ")\n",
     "Select distinct user_id \n",
     "from consecutive_transactions\n",
-    "where diff = 0;"
+    "where diff = 0;\n",
+    "\n",
+    "-- Solution2\n",
+    "SELECT DISTINCT T1.user_id\n",
+    "FROM transactions AS T1\n",
+    "INNER JOIN transactions AS T2\n",
+    "  ON DATE(T2.transaction_date) = DATE(T1.transaction_date) + 1\n",
+    "INNER JOIN transactions AS T3\n",
+    "  ON DATE(T3.transaction_date) = DATE(T1.transaction_date) + 2\n",
+    "ORDER BY T1.user_id;"
    ]
   },
   {
