Compressed Mode & Card Launch Success

--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -2246,6 +2246,154 @@
     "order by transaction_date;\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "030300e5-351d-4062-ae99-fb53df4ddb56",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Compressed Mode\n",
+    "Alibaba SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/alibaba-compressed-mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2c5609b6-a708-431a-9b4f-5f28bfd06c60",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- You're given a table containing the item count for each order on Alibaba, along with the frequency of orders that have the same item count. Write a query to retrieve the mode of the order occurrences. Additionally, if there are multiple item counts with the same mode, the results should be sorted in ascending order.\n",
+    "\n",
+    "-- Clarifications:\n",
+    "\n",
+    "-- item_count: Represents the number of items sold in each order.\n",
+    "-- order_occurrences: Represents the frequency of orders with the corresponding number of items sold per order.\n",
+    "-- For example, if there are 800 orders with 3 items sold in each order, the record would have an item_count of 3 and an order_occurrences of 800.\n",
+    "-- Effective June 14th, 2023, the problem statement has been revised and additional clarification have been added for clarity.\n",
+    "\n",
+    "-- items_per_order Table:\n",
+    "-- Column Name\tType\n",
+    "-- item_count\tinteger\n",
+    "-- order_occurrences\tinteger\n",
+    "-- items_per_order Example Input:\n",
+    "-- item_count\torder_occurrences\n",
+    "-- 1\t500\n",
+    "-- 2\t1000\n",
+    "-- 3\t800\n",
+    "-- Example Output:\n",
+    "-- mode\n",
+    "-- 2\n",
+    "-- Explanation:\n",
+    "-- Based on the example output, the order_occurrences value of 1000 corresponds to the highest frequency among all item counts. This means that item count of 2 has occurred 1000 times, making it the mode of order occurrences.\n",
+    "\n",
+    "-- Solution\n",
+    "with item_occurances_rnk as\n",
+    "(SELECT item_count,\n",
+    "rank() over(order by order_occurrences desc) as rnk\n",
+    "FROM items_per_order\n",
+    ")\n",
+    "Select item_count as mode\n",
+    "from item_occurances_rnk\n",
+    "where rnk = 1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "78a76e3b-138a-487b-b151-9252cd7eb613",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Card Launch Success\n",
+    "JPMorgan SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/card-launch-success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6c3ad6cd-56f9-4c2e-9495-85394a720853",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- Your team at JPMorgan Chase is soon launching a new credit card. You are asked to estimate how many cards you'll issue in the first month.\n",
+    "\n",
+    "-- Before you can answer this question, you want to first get some perspective on how well new credit card launches typically do in their first month.\n",
+    "\n",
+    "-- Write a query that outputs the name of the credit card, and how many cards were issued in its launch month. The launch month is the earliest record in the monthly_cards_issued table for a given card. Order the results starting from the biggest issued amount.\n",
+    "\n",
+    "-- monthly_cards_issued Table:\n",
+    "-- Column Name\tType\n",
+    "-- issue_month\tinteger\n",
+    "-- issue_year\tinteger\n",
+    "-- card_name\tstring\n",
+    "-- issued_amount\tinteger\n",
+    "-- monthly_cards_issued Example Input:\n",
+    "-- issue_month\tissue_year\tcard_name\tissued_amount\n",
+    "-- 1\t2021\tChase Sapphire Reserve\t170000\n",
+    "-- 2\t2021\tChase Sapphire Reserve\t175000\n",
+    "-- 3\t2021\tChase Sapphire Reserve\t180000\n",
+    "-- 3\t2021\tChase Freedom Flex\t65000\n",
+    "-- 4\t2021\tChase Freedom Flex\t70000\n",
+    "-- Example Output:\n",
+    "-- card_name\tissued_amount\n",
+    "-- Chase Sapphire Reserve\t170000\n",
+    "-- Chase Freedom Flex\t65000\n",
+    "-- Explanation\n",
+    "-- Chase Sapphire Reserve card was launched on 1/2021 with an issued amount of 170,000 cards and the Chase Freedom Flex card was launched on 3/2021 with an issued amount of 65,000 cards.\n",
+    "\n",
+    "-- Solution\n",
+    "with monthly_cards_issued_with_rnk as\n",
+    "(SELECT card_name, \n",
+    "issued_amount,\n",
+    "rank() over(partition by card_name order by issue_year, issue_month) as rnk\n",
+    "FROM monthly_cards_issued\n",
+    ")\n",
+    "Select card_name,\n",
+    "issued_amount\n",
+    "from monthly_cards_issued_with_rnk\n",
+    "where rnk = 1\n",
+    "order by issued_amount desc\n",
+    ";"
+   ]
   }
  ],
  "metadata": {
