--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -2394,6 +2394,248 @@
     "order by issued_amount desc\n",
     ";"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7c4fb98a-5a00-4fa6-83ea-5d6faf371171",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##International Call Percentage\n",
+    "Verizon SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/international-call-percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ee28087b-b9bf-45a7-a204-7df58b862021",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- A phone call is considered an international call when the person calling is in a different country than the person receiving the call.\n",
+    "\n",
+    "-- What percentage of phone calls are international? Round the result to 1 decimal.\n",
+    "\n",
+    "-- Assumption:\n",
+    "\n",
+    "-- The caller_id in phone_info table refers to both the caller and receiver.\n",
+    "-- phone_calls Table:\n",
+    "-- Column Name\tType\n",
+    "-- caller_id\tinteger\n",
+    "-- receiver_id\tinteger\n",
+    "-- call_time\ttimestamp\n",
+    "-- phone_calls Example Input:\n",
+    "-- caller_id\treceiver_id\tcall_time\n",
+    "-- 1\t2\t2022-07-04 10:13:49\n",
+    "-- 1\t5\t2022-08-21 23:54:56\n",
+    "-- 5\t1\t2022-05-13 17:24:06\n",
+    "-- 5\t6\t2022-03-18 12:11:49\n",
+    "-- phone_info Table:\n",
+    "-- Column Name\tType\n",
+    "-- caller_id\tinteger\n",
+    "-- country_id\tinteger\n",
+    "-- network\tinteger\n",
+    "-- phone_number\tstring\n",
+    "-- phone_info Example Input:\n",
+    "-- caller_id\tcountry_id\tnetwork\tphone_number\n",
+    "-- 1\tUS\tVerizon\t+1-212-897-1964\n",
+    "-- 2\tUS\tVerizon\t+1-703-346-9529\n",
+    "-- 3\tUS\tVerizon\t+1-650-828-4774\n",
+    "-- 4\tUS\tVerizon\t+1-415-224-6663\n",
+    "-- 5\tIN\tVodafone\t+91 7503-907302\n",
+    "-- 6\tIN\tVodafone\t+91 2287-664895\n",
+    "-- Example Output:\n",
+    "-- international_calls_pct\n",
+    "-- 50.0\n",
+    "-- Explanation\n",
+    "-- There is a total of 4 calls with 2 of them being international calls (from caller_id 1 => receiver_id 5, and caller_id 5 => receiver_id 1). Thus, 2/4 = 50.0%\n",
+    "\n",
+    "-- Solution\n",
+    "with caller_receiver_country_info as\n",
+    "(SELECT pc.caller_id, \n",
+    "pi_caller.country_id as caller_country,\n",
+    "pc.receiver_id,\n",
+    "pi_receiver.country_id as receiver_country\n",
+    "FROM phone_calls pc\n",
+    "join phone_info pi_caller\n",
+    "on pc.caller_id = pi_caller.caller_id\n",
+    "join phone_info pi_receiver\n",
+    "on pc.receiver_id = pi_receiver.caller_id\n",
+    ")\n",
+    "Select round((sum(case when caller_country <> receiver_country then 1.0 else 0.0 end)/count(*))*100.0, 1) as international_calls_pct\n",
+    "from caller_receiver_country_info\n",
+    ";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1a864557-2d5f-407f-9a75-34503c7c90a4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Patient Support Analysis (Part 2)\n",
+    "UnitedHealth SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/uncategorized-calls-percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "24db254e-901c-4267-b3e2-7a354b8ff434",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- UnitedHealth Group (UHG) has a program called Advocate4Me, which allows policy holders (or, members) to call an advocate and receive support for their health care needs – whether that's claims and benefits support, drug coverage, pre- and post-authorisation, medical records, emergency assistance, or member portal services.\n",
+    "\n",
+    "-- Calls to the Advocate4Me call centre are classified into various categories, but some calls cannot be neatly categorised. These uncategorised calls are labeled as “n/a”, or are left empty when the support agent does not enter anything into the call category field.\n",
+    "\n",
+    "-- Write a query to calculate the percentage of calls that cannot be categorised. Round your answer to 1 decimal place. For example, 45.0, 48.5, 57.7.\n",
+    "\n",
+    "-- callers Table:\n",
+    "-- Column Name\tType\n",
+    "-- policy_holder_id\tinteger\n",
+    "-- case_id\tvarchar\n",
+    "-- call_category\tvarchar\n",
+    "-- call_date\ttimestamp\n",
+    "-- call_duration_secs\tinteger\n",
+    "-- callers Example Input:\n",
+    "-- policy_holder_id\tcase_id\tcall_category\tcall_date\tcall_duration_secs\n",
+    "-- 1\tf1d012f9-9d02-4966-a968-bf6c5bc9a9fe\temergency assistance\t2023-04-13T19:16:53Z\t144\n",
+    "-- 1\t41ce8fb6-1ddd-4f50-ac31-07bfcce6aaab\tauthorisation\t2023-05-25T09:09:30Z\t815\n",
+    "-- 2\t9b1af84b-eedb-4c21-9730-6f099cc2cc5e\tn/a\t2023-01-26T01:21:27Z\t992\n",
+    "-- 2\t8471a3d4-6fc7-4bb2-9fc7-4583e3638a9e\temergency assistance\t2023-03-09T10:58:54Z\t128\n",
+    "-- 2\t38208fae-bad0-49bf-99aa-7842ba2e37bc\tbenefits\t2023-06-05T07:35:43Z\t619\n",
+    "-- Example Output:\n",
+    "-- uncategorised_call_pct\n",
+    "-- 20.0\n",
+    "-- Explanation:\n",
+    "-- Out of the total of 5 calls registered, one call was not categorised. Therefore, the percentage of uncategorised calls is calculated as 20.0% (1 out of 5 multiplied by 100 and rounded to one decimal place).\n",
+    "\n",
+    "-- Solution\n",
+    "SELECT round(sum(case when call_category = 'n/a' or call_category is null then 1.0 else 0.0 end)/count(*)*100.0,1) as uncategorised_call_pct \n",
+    "FROM callers;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "138f45c0-87f0-4bba-bbe0-9e5d3cf972f3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Y-on-Y Growth Rate\n",
+    "Wayfair SQL Interview Question<br>\n",
+    "Difficulty: Medium<br>\n",
+    "Source: https://datalemur.com/questions/yoy-growth-rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "92105f22-638a-45e3-83dd-a097de99bb50",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- Assume you're given a table containing information about Wayfair user transactions for different products. Write a query to calculate the year-on-year growth rate for the total spend of each product, grouping the results by product ID.\n",
+    "\n",
+    "-- The output should include the year in ascending order, product ID, current year's spend, previous year's spend and year-on-year growth percentage, rounded to 2 decimal places.\n",
+    "\n",
+    "-- user_transactions Table:\n",
+    "-- Column Name\tType\n",
+    "-- transaction_id\tinteger\n",
+    "-- product_id\tinteger\n",
+    "-- spend\tdecimal\n",
+    "-- transaction_date\tdatetime\n",
+    "-- user_transactions Example Input:\n",
+    "-- transaction_id\tproduct_id\tspend\ttransaction_date\n",
+    "-- 1341\t123424\t1500.60\t12/31/2019 12:00:00\n",
+    "-- 1423\t123424\t1000.20\t12/31/2020 12:00:00\n",
+    "-- 1623\t123424\t1246.44\t12/31/2021 12:00:00\n",
+    "-- 1322\t123424\t2145.32\t12/31/2022 12:00:00\n",
+    "-- Example Output:\n",
+    "-- year\tproduct_id\tcurr_year_spend\tprev_year_spend\tyoy_rate\n",
+    "-- 2019\t123424\t1500.60\tNULL\tNULL\n",
+    "-- 2020\t123424\t1000.20\t1500.60\t-33.35\n",
+    "-- 2021\t123424\t1246.44\t1000.20\t24.62\n",
+    "-- 2022\t123424\t2145.32\t1246.44\t72.12\n",
+    "-- Explanation:\n",
+    "-- Product ID 123424 is analyzed for multiple years: 2019, 2020, 2021, and 2022.\n",
+    "\n",
+    "-- In the year 2020, the current year's spend is 1000.20, and there is no previous year's spend recorded (indicated by an empty cell).\n",
+    "-- In the year 2021, the current year's spend is 1246.44, and the previous year's spend is 1000.20.\n",
+    "-- In the year 2022, the current year's spend is 2145.32, and the previous year's spend is 1246.44.\n",
+    "-- To calculate the year-on-year growth rate, we compare the current year's spend with the previous year's spend.For instance, the spend grew by 24.62% from 2020 to 2021, indicating a positive growth rate.\n",
+    "\n",
+    "--Solution\n",
+    "with user_transactions_yoy as\n",
+    "(\n",
+    "SELECT product_id,\n",
+    "spend as curr_year_spend,\n",
+    "lag(spend) over(partition by product_id order by transaction_date) as prev_year_spend,\n",
+    "transaction_date\n",
+    "FROM user_transactions\n",
+    ")\n",
+    "Select date_part('year', transaction_date) as year,\n",
+    "product_id,\n",
+    "curr_year_spend,\n",
+    "prev_year_spend,\n",
+    "round((curr_year_spend-prev_year_spend)/prev_year_spend*100.0,2) as yoy_rate\n",
+    "from user_transactions_yoy\n",
+    "order by product_id, transaction_date;"
+   ]
   }
  ],
  "metadata": {
