Median Google Search Frequency

--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -2636,6 +2636,106 @@
     "from user_transactions_yoy\n",
     "order by product_id, transaction_date;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2f41ce3d-8766-4cf2-99f7-006ac38b51b3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Median Google Search Frequency\n",
+    "Google SQL Interview Question<br>\n",
+    "Difficulty: Hard<br>\n",
+    "Source: https://datalemur.com/questions/median-search-freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "63bcac32-7dfd-4563-898c-ee122eb1bc0b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- Google's marketing team is making a Superbowl commercial and needs a simple statistic to put on their TV ad: the median number of searches a person made last year.\n",
+    "\n",
+    "-- However, at Google scale, querying the 2 trillion searches is too costly. Luckily, you have access to the summary table which tells you the number of searches made last year and how many Google users fall into that bucket.\n",
+    "\n",
+    "-- Write a query to report the median of searches made by a user. Round the median to one decimal point.\n",
+    "\n",
+    "-- search_frequency Table:\n",
+    "-- Column Name\tType\n",
+    "-- searches\tinteger\n",
+    "-- num_users\tinteger\n",
+    "-- search_frequency Example Input:\n",
+    "-- searches\tnum_users\n",
+    "-- 1\t2\n",
+    "-- 2\t2\n",
+    "-- 3\t3\n",
+    "-- 4\t1\n",
+    "-- Example Output:\n",
+    "-- median\n",
+    "-- 2.5\n",
+    "-- By expanding the search_frequency table, we get [1, 1, 2, 2, 3, 3, 3, 4] which has a median of 2.5 searches per user.\n",
+    "\n",
+    "-- Solution\n",
+    "\n",
+    "with cte1 as\n",
+    "(\n",
+    "SELECT \n",
+    "sf1.searches, sf1.num_users,\n",
+    "row_number() over(partition by sf1.searches order by sf2.searches) as rnk\n",
+    "FROM search_frequency sf1\n",
+    "cross join search_frequency sf2\n",
+    "),\n",
+    "cte2 as\n",
+    "(Select \n",
+    "searches,\n",
+    "row_number() over(order by searches) as overall_rnk\n",
+    "from cte1\n",
+    "where rnk<=num_users\n",
+    "),\n",
+    "cte3 as\n",
+    "(Select \n",
+    "*,\n",
+    "case \n",
+    "when (max(overall_rnk) over())%2=0 then (max(overall_rnk) over())/2 \n",
+    "else ((max(overall_rnk) over())+1)/2 \n",
+    "end as median_index,\n",
+    "case \n",
+    "when (max(overall_rnk) over())%2=0 then 'Even'\n",
+    "else 'Odd'\n",
+    "End as num_searches\n",
+    "from cte2\n",
+    "),\n",
+    "cte4 as\n",
+    "(Select *,\n",
+    "case when num_searches = 'Even' and ((overall_rnk = median_index) or (overall_rnk = median_index+1 )) then 1 \n",
+    "when num_searches = 'Odd' and overall_rnk = median_index then 1\n",
+    "else 0\n",
+    "end as Flag\n",
+    "from cte3\n",
+    ")\n",
+    "Select round(avg(searches),1) as median\n",
+    "from cte4\n",
+    "where Flag = 1;"
+   ]
   }
  ],
  "metadata": {
